# youtube-playlist-editor

./: .gitignore  README.md  pyproject.toml
src/youtube_playlist_editor/: __main__.py  api.py  auth.py  cli.py  utils.py
tests/: test_api.py  test_auth.py  test_cli.py  test_utils.py
